--- a/signup.html
+++ b/signup.html
@@ -4,15 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   <title>Newsletter Signup</title>
 </head>
 <body>
-  <form>
-      <h3>Signup to My Newsletter!</h3>
-      <input type="firstName" placeholder="First Name">
-      <input type="lastName" placeholder="Last Name">
-      <input type="emailAddress" placeholder="Email Address" >
-      <button>Sign me</button>
-  </form>
+  <div class="signup">
+    <form>
+        <h1>Signup to My Newsletter!</h1>
+        <input class="top" type="firstName" placeholder="First Name">
+        <input class="middle" type="lastName" placeholder="Last Name">
+        <input class="bottom" type="emailAddress" placeholder="Email Address" >
+        <button>Sign me</button>
+    </form>
+  </div>
 </body>
 </html>
